GGG-170 Allow context parameters for services.